<resources>
    <string name="app_name">SavMed</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="notification_missed_calls">%s missed calls</string>
    <string name="call_action_pause_call">Pause</string>
    <string name="call_action_resume_call">Resume</string>
    <string name="call_state_paused">Paused</string>
    <string name="call_state_paused_by_remote">Paused by remote</string>
    <string name="yesterday">Yesterday</string>
    <string name="notification_mark_message_as_read">Mark as read</string>
    <string name="contact_presence_status_online">Online</string>
    <string name="contact_presence_status_was_online_on">Online on %s</string>
    <string name="contact_presence_status_was_online_today_at">Online today at %s</string>
    <string name="contact_presence_status_was_online_yesterday_at">Online yesterday at %s</string>
    <string name="contact_presence_status_away">Away</string>
    <string name="contact_presence_status_do_not_disturb">Do not disturb</string>
    <string name="contact_call_action">Call</string>
    <string name="contact_message_action">Message</string>
    <string name="contact_video_call_action">Video Call</string>
    <string name="contact_make_call_check_device_trust">Verify</string>
    <string name="contact_device_without_name">Unnamed device</string>
    <string name="emoji_love" translatable="false">❤️</string>
    <string name="emoji_thumbs_up" translatable="false">👍</string>
    <string name="emoji_laughing" translatable="false">😂</string>
    <string name="emoji_surprised" translatable="false">😮</string>
    <string name="emoji_tear" translatable="false">😢</string>
    <string name="notification_channel_chat_id" translatable="false">savMed_notification_chat_id</string>
    <plurals name="days">
        <item quantity="one">%s day</item>
        <item quantity="other">%s days</item>
    </plurals>
    <string name="vertical_separator" translatable="false">|</string>
    <string name="call_action_start_new_call">New call</string>
    <string name="call_action_go_to_calls_list">Calls list</string>
    <string name="call_action_show_dialer">Dialer</string>
    <string name="call_action_show_messages">Messages</string>
    <string name="call_action_record_call">Record</string>
    <string name="content_description_answer_call">Answers the call</string>
    <string name="call_waiting_for_encryption_info">Waiting for encryption…</string>
    <string name="call_stats_media_encryption_title">Media encryption</string>
    <string name="call_do_zrtp_sas_validation_again">Validate ZRTP SAS again</string>
    <string name="call_outgoing">Outgoing call</string>
    <string name="call_stats_audio_title">Audio</string>
    <string name="call_stats_video_title">Video</string>
    <string name="call_stats_fec_title">FEC</string>
    <string name="call_not_encrypted">Call is not encrypted</string>
    <string name="call_zrtp_sas_validation_required">Validation required</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emergency_contatcs">Emergency Contatcs</string>
    <string name="content_description_trusted_contact_icon">Contact is trusted</string>
    <string name="content_description_not_trusted_contact_icon">Contact is not trusted!</string>
    <string name="content_description_contact_online">Contact is online</string>
    <string name="content_description_contact_away">Contact is not online</string>
    <string name="content_description_open_drawer_menu_icon">Open drawer menu</string>
    <string name="content_description_go_back_icon">Go back</string>
    <string name="content_description_dismiss_notification">Dismiss notification</string>
    <string name="content_description_save_changes">Save changes</string>
    <string name="content_description_show_popup_menu">Show menu</string>
    <string name="content_description_confirm_new_participants_list">Confirm new participants list</string>
    <string name="content_description_click_for_more_info">Click to have more information</string>
    <string name="content_description_click_to_remove_participant">Click to remove participant</string>
    <string name="content_description_toggle_password_visibility">Toggles password visibility</string>
    <string name="content_description_toggle_bottom_sheet">Expands/retracts bottom sheet</string>
    <string name="content_description_hang_up_call">Terminates the call</string>
    <string name="content_description_answer_audio_call">Answers the call</string>
    <string name="content_description_answer_video_call">Answers the video call</string>
    <string name="content_description_call_start">Starts a call</string>
    <string name="content_description_call_start_video">Starts a video call</string>
    <string name="content_description_toggle_video">Enables/disables sending  your camera feed</string>
    <string name="content_description_toggle_microphone">Mute/un-mute your microphone</string>
    <string name="content_description_change_output_audio_device">Changes output audio device</string>
    <string name="content_description_change_camera">Changes camera (front/back) being used</string>
    <string name="content_description_paused_call">Call is in paused state</string>
    <string name="content_description_show_call_statistics">Shows call statistics</string>
    <string name="content_description_call_is_being_recorded">You are recording this call</string>
    <string name="content_description_erase_last_input">Removes the last digit or character</string>
    <string name="content_description_merge_calls_into_conference">Merges calls into a conference</string>
    <string name="content_description_open_filter">Opens filter area</string>
    <string name="content_description_cancel_filter">Closes filter area</string>
    <string name="content_description_clear_filter">Clear current filter</string>
    <string name="content_description_create_group_conversation">Creates the group conversation</string>
    <string name="content_description_create_group_call">Starts the group call</string>
    <string name="content_description_show_numpad">Shows the numpad</string>
    <string name="content_description_spinner_caret">Click to show all available options</string>
    <string name="content_description_conference_participant_muted">Participant is muted</string>
    <string name="content_description_conference_participant_speaking">Participant is speaking</string>
    <string name="content_description_add_participants">Add participants</string>
    <string name="content_description_play_pause_audio_playback">Plays/pauses the audio playback</string>
    <string name="content_description_play_pause_video_playback">Plays/pauses the video playback</string>
    <string name="content_description_share_file">Share file</string>
    <string name="content_description_save_file">Save file</string>
    <string name="content_description_chat_bubble_image">Image attached to message</string>
    <string name="content_description_chat_bubble_video">Video attached to message</string>
    <string name="content_description_chat_bubble_file">File attached to message</string>
    <string name="content_description_chat_bubble_reply">This message is a reply to a previous message</string>
    <string name="content_description_chat_bubble_forward">This message was forwarded from another conversation</string>
    <string name="content_description_chat_bubble_delivery_status">Click to have delivery status</string>
    <string name="content_description_chat_bubble_toggle_voice_message_play_pause">Plays/pauses the voice message playback</string>
    <string name="content_description_chat_remove_attachment">Remove this file from attachments</string>
    <string name="content_description_chat_remove_attachments">Close attachments</string>
    <string name="content_description_chat_muted">Conversation has been silenced</string>
    <string name="content_description_chat_ephemeral_enabled">Ephemeral messages are enabled</string>
    <string name="content_description_chat_scroll_to_bottom_or_first_unread">Scrolls to first unread message or to the bottom</string>
    <string name="content_description_chat_close_participants_list">Closes participants list</string>
    <string name="content_description_cancel_voice_message_recording">Cancels voice message recording</string>
    <string name="content_description_stop_voice_message_recording">Stops voice message recording</string>
    <string name="content_description_chat_start_voice_message_recording">Starts recording a voice message</string>
    <string name="content_description_chat_send_message">Sends message in conversation</string>
    <string name="content_description_chat_cancel_reply">Message will no longer be a reply to a previous message</string>
    <string name="content_description_chat_open_emoji_picker">Opens emoji picker</string>
    <string name="content_description_chat_open_attach_media">Opens media picker</string>
    <string name="content_description_chat_take_picture">Opens camera to take a picture</string>
    <string name="content_description_chat_edit_conversation_subject">Click to edit the subject of this conversation</string>
    <string name="content_description_chat_toggle_mute">Silences on/off this conversation</string>
    <string name="content_description_chat_removal_in_progress">Conversation is being removed</string>
    <string name="content_description_chat_unsecured">This conversation isn\'t secured</string>
    <string name="content_description_chat_search_message_up">Search up</string>
    <string name="content_description_chat_search_message_down">Search down</string>
    <string name="content_description_chat_create">Start a new conversation</string>
    <string name="content_description_meeting_today">Scroll to today</string>
    <string name="content_description_schedule_meeting">Schedule a meeting</string>
    <string name="content_description_meeting_schedule">Schedule the meeting</string>
    <string name="content_description_meeting_edit">Edit the meeting</string>
    <string name="content_description_meeting_share">Share meeting address</string>
    <string name="content_description_meeting_participants_list">Participants list</string>
    <string name="content_description_contact_device_trusted">Device is trusted</string>
    <string name="content_description_contact_edit">Edit contact</string>
    <string name="content_description_contact_remove_field">Remove field</string>
    <string name="content_description_contacts_list_filters">Show contacts list filters</string>
    <string name="content_description_contact_create">Create a contact</string>
    <string name="content_description_join_conference">Join the conference</string>
    <string name="content_description_carddav_delete">Delete this CardDAV configuration</string>
    <string name="content_description_carddav_save">Save CardDAV configuration</string>
    <string name="content_description_ldap_delete">Delete this LDAP configuration</string>
    <string name="content_description_ldap_save">Save LDAP configuration</string>
    <string name="content_description_play_call_recording">Plays the call recording</string>
    <string name="conversation_text_field_hint">Say something…</string>
</resources>