<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="openFilePickerClickListener"
            type="View.OnClickListener" />
        <variable
            name="openCameraClickListener"
            type="View.OnClickListener" />
        <variable
            name="viewModel"
            type="mu.location.savmed.ui.chat.viewModel.SendInMessageViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/color_grey_100">

        <!-- Keep behavior to have it at the bottom -->

<!--        from below kode visibility was changed-->
        <androidx.constraintlayout.widget.Group
            android:id="@+id/standard_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.isVoiceRecording ? View.INVISIBLE : View.VISIBLE}"
            app:constraint_referenced_ids="attach_file, message_area_background, message_to_send" />

        <!--        from below kode visibility was changed-->

        <androidx.constraintlayout.widget.Group
            android:id="@+id/extra_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.isVoiceRecording ? View.INVISIBLE : (viewModel.isKeyboardOpen || viewModel.isCallConversation || !viewModel.isFileTransferServerAvailable) ? View.GONE : View.VISIBLE}"
            app:constraint_referenced_ids="emoji_picker_toggle, capture_image" />

        <!--        from below kode visibility,bind was changed-->

        <include
            android:id="@+id/reply_area"
            layout="@layout/chat_conversation_reply_area"
            bind:viewModel="@{viewModel}"
            android:visibility="@{viewModel.isReplying ? View.VISIBLE : View.GONE, default=gone}"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        from below kode visibility,bind was changed-->

        <include
            android:id="@+id/attachments"
            layout="@layout/chat_conversation_attachments_area"
            bind:viewModel="@{viewModel}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.isFileAttachmentsListOpen ? View.VISIBLE : View.GONE, default=visible}"
            app:layout_constraintTop_toBottomOf="@id/reply_area" />

        <!--        from below kode visibility,bind was changed-->

        <include
            android:id="@+id/participants"
            layout="@layout/chat_conversation_participants_area"
            bind:viewModel="@{viewModel}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/attachments" />

        <androidx.emoji2.emojipicker.EmojiPickerView
            android:id="@+id/emoji_picker"
            android:layout_width="match_parent"
            android:layout_height="@dimen/chat_room_emoji_picker_height"
            android:background="?attr/color_grey_100"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/attachments" />

<!--        app:constraint_referenced_ids="emoji_picker, participants, attachments, reply_area"-->
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/top_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="emoji_picker, participants, attachments, reply_area" />

        <!-- Form below kode onclick was removed, src was changed        -->
        <ImageView
            android:id="@+id/emoji_picker_toggle"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:padding="8dp"
            android:visibility="gone"
            android:contentDescription="@string/content_description_chat_open_emoji_picker"
            android:src="@drawable/smiley"
            app:layout_constraintBottom_toBottomOf="@id/message_area_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/message_area_background"
            app:tint="@color/icon_color_selector" />

        <!-- Form below kode enabled was changed          -->

        <ImageView
            android:id="@+id/attach_file"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:onClick="@{openFilePickerClickListener}"
            android:padding="8dp"
            android:enabled="@{!viewModel.maxNumberOfAttachmentsReached}"
            android:src="@drawable/paperclip"
            android:contentDescription="@string/content_description_chat_open_attach_media"
            app:layout_constraintBottom_toBottomOf="@id/message_area_background"
            app:layout_constraintEnd_toStartOf="@id/capture_image"
            app:layout_constraintStart_toEndOf="@id/emoji_picker_toggle"
            app:layout_constraintTop_toTopOf="@id/message_area_background"
            app:tint="@color/icon_color_selector" />

        <!-- from below code =enablerd dwas removed        -->
        <ImageView
            android:id="@+id/capture_image"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:onClick="@{openCameraClickListener}"
            android:enabled="@{!viewModel.maxNumberOfAttachmentsReached}"
            android:padding="8dp"
            android:src="@drawable/camera"
            android:contentDescription="@string/content_description_chat_take_picture"
            app:layout_constraintBottom_toBottomOf="@id/message_area_background"
            app:layout_constraintEnd_toStartOf="@id/message_area_background"
            app:layout_constraintStart_toEndOf="@id/attach_file"
            app:layout_constraintTop_toTopOf="@id/message_area_background"
            app:tint="@color/icon_color_selector" />

        <ImageView
            android:id="@+id/message_area_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/edit_text_background"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="@id/message_to_send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/capture_image"
            app:layout_constraintTop_toTopOf="@id/message_to_send" />

        <mu.location.savmed.ui.chat.view.RichEditText
            android:id="@+id/message_to_send"
            style="@style/default_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="16dp"
            android:background="@color/transparent_color"
            android:hint="@string/conversation_text_field_hint"
            android:imeOptions="flagNoPersonalizedLearning"
            android:inputType="textShortMessage|textMultiLine|textAutoComplete|textAutoCorrect|textCapSentences"
            android:maxLines="3"
            android:minHeight="48dp"
            android:text="@={viewModel.textToSend}"
            android:enabled="@{!viewModel.isVoiceRecording}"
            android:textColorHint="?attr/color_main2_400"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/send_barrier"
            app:layout_constraintStart_toStartOf="@id/message_area_background"
            app:layout_constraintTop_toBottomOf="@id/top_barrier" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/send_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="start"
            app:constraint_referenced_ids="record_voice_message, send_message" />

        <!-- freom below code    onclick was removed visibility was chanhged    -->
        <ImageView
            android:id="@+id/send_message"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginEnd="4dp"
            android:enabled="@{viewModel.textToSend.length() > 0 || viewModel.attachments.size() > 0}"
            android:visibility="@{viewModel.textToSend.length() > 0 || viewModel.attachments.size() > 0 ? View.VISIBLE : View.GONE, default=gone}"
            android:padding="8dp"
            android:onClick="@{() -> viewModel.sendMessage()}"
            android:src="@drawable/paper_plane_right"
            android:contentDescription="@string/content_description_chat_send_message"
            app:layout_constraintBottom_toBottomOf="@id/message_area_background"
            app:layout_constraintEnd_toEndOf="@id/message_area_background"
            app:layout_constraintTop_toTopOf="@id/message_area_background"
            app:tint="@color/icon_primary_color_selector" />


        <!-- freom below code    onclick was removed visibility was chanhged    -->

<!--        android:enabled = "@{viewModel.textToSend.length() > 0 || viewModel.attachments.size() > 0}"-->
        <ImageView
            android:id="@+id/record_voice_message"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginEnd="4dp"
            android:visibility="@{viewModel.textToSend.length() > 0 || viewModel.attachments.size() > 0 || viewModel.isVoiceRecording || !viewModel.isFileTransferServerAvailable ? View.GONE : View.VISIBLE}"
            android:padding="8dp"
            android:onClick="@{() -> viewModel.startVoiceMessageRecording()}"
            android:src="@drawable/microphone"
            android:contentDescription="@string/content_description_chat_start_voice_message_recording"
            app:layout_constraintBottom_toBottomOf="@id/message_area_background"
            app:layout_constraintEnd_toEndOf="@id/message_area_background"
            app:layout_constraintTop_toTopOf="@id/message_area_background"
            app:tint="?attr/color_main2_500" />

        <include
            android:id="@+id/voice_recording_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/chat_conversation_record_voice_message_area"
            bind:viewModel="@{viewModel}"
            android:visibility="@{viewModel.isVoiceRecording ? View.VISIBLE : View.GONE, default=gone}"
            app:layout_constraintTop_toTopOf="@id/message_area_background"
            app:layout_constraintBottom_toBottomOf="@id/message_area_background"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>